kubernetes-manifests/gateway/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: lgtm-grafana
  name: grafana
spec:
  parentRefs:
    - kind: Gateway
      namespace: kuar-demo
      name: my-gateway
      sectionName: https
  hostnames:
    - grafana.gogke-test-7.damlys.pl
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
