kubernetes-manifests/gateway/kuard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kuar-demo
  name: kuard
spec:
  parentRefs:
    - kind: Gateway
      namespace: kuar-demo
      name: my-gateway
      sectionName: https
  hostnames:
    - kuard.gogke-test-7.damlys.pl
  rules:
    - backendRefs:
        - name: kuard-http-server
          port: 80
